#1 fix failsafe conf